--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "starter-node-angular",
   "main": "server.js",
   "dependencies": {
-    "express" : "~4.5.1",
-	"mongoose" : "~3.8.0",
-	"body-parser" : "~1.4.2",
-	"method-override" : "~2.0.2"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "method-override": "^2.3.10",
+    "mongoose": "^5.13.3",
+    "node-cmd": "^4.0.0",
+    "node-ssh": "^12.0.0"
   }
 }
-
